--- a/i18n/zh_CN.po
+++ b/i18n/zh_CN.po
@@ -1,21 +1,24 @@
-# Chinese (Simplified) translation for openobject-addons
-# Copyright (c) 2012 Rosetta Contributors and Canonical Ltd 2012
-# This file is distributed under the same license as the openobject-addons package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2012.
+# Translation of OpenERP Server.
+# This file contains the translation of the following modules:
+#	* tracking
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: openobject-addons\n"
-"Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-11-07 02:03+0000\n"
-"Last-Translator: 盈通 ccdos <ccdos@intoerp.com>\n"
-"Language-Team: Chinese (Simplified) <zh_CN@li.org>\n"
+"Project-Id-Version: OpenERP Server 7.0-20140701-231127\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2015-01-14 03:39+0000\n"
+"PO-Revision-Date: 2015-01-14 03:39+0000\n"
+"Last-Translator: <>\n"
+"Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-11-21 06:29+0000\n"
-"X-Generator: Launchpad (build 16831)\n"
+"Content-Transfer-Encoding: \n"
+"Plural-Forms: \n"
+
+#. module: tracking
+#: selection:tracking.check,use:0
+msgid "On Production Line"
+msgstr "在生产线"
 
 #. module: tracking
 #: field:tracking.tracking,production_serial_number:0
@@ -23,9 +26,9 @@ msgid "Production Serial Number"
 msgstr "生产序列号"
 
 #. module: tracking
-#: model:ir.model,name:tracking.model_tracking_location
-msgid "tracking.location"
-msgstr "tracking.location"
+#: field:tracking.tracking,date_ids:0
+msgid "Verification History For * Tier"
+msgstr "层次验证历史"
 
 #. module: tracking
 #: selection:tracking.tracking,condition:0
@@ -48,14 +51,15 @@ msgid "Sample Data 1"
 msgstr "样品数据 1"
 
 #. module: tracking
+#: selection:tracking.check,use:0
 #: field:tracking.location,with_department_member:0
 msgid "With Department Member"
-msgstr "With Department Member"
+msgstr "合作部门成员"
 
 #. module: tracking
-#: model:ir.model,name:tracking.model_tracking_verification
-msgid "tracking.verification"
-msgstr "tracking.verification"
+#: selection:tracking.check,state:0
+msgid "Checked-out"
+msgstr "被检出"
 
 #. module: tracking
 #: selection:tracking.tracking,type:0
@@ -69,9 +73,21 @@ msgid "Frequency Response"
 msgstr "频率反应"
 
 #. module: tracking
-#: field:tracking.tracking,version:0
-msgid "Version"
-msgstr "版本"
+#: field:tracking.check,state:0
+msgid "State"
+msgstr "状态"
+
+#. module: tracking
+#: model:ir.actions.act_window,name:tracking.check_list_action
+#: model:ir.actions.act_window,name:tracking.tracking_list_action
+#: model:ir.ui.menu,name:tracking.main_tracking_menu
+#: model:ir.ui.menu,name:tracking.tracking_menu
+#: field:tracking.check,tracking_id:0
+#: field:tracking.sample,tracking_id:0
+#: view:tracking.tracking:0
+#: field:tracking.verification,tracking_id:0
+msgid "Tracking"
+msgstr "追踪"
 
 #. module: tracking
 #: selection:tracking.tracking,tier:0
@@ -79,15 +95,18 @@ msgid "Golden Reference"
 msgstr "黄金参考"
 
 #. module: tracking
-#: view:tracking.location:0
-#: field:tracking.tracking,location_ids:0
-msgid "Location"
-msgstr "地点"
+#: field:tracking.tracking,check_ids:0
+msgid "Check In"
+msgstr "检入"
 
 #. module: tracking
-#: selection:tracking.tracking,type:0
-msgid "Electronics"
-msgstr "Electronics"
+#: model:ir.actions.act_window,help:tracking.tracking_list_action
+msgid "<p class=\"oe_view_nocontent_create\">Create New Tracking Information</p>\n"
+"          \n"
+"            "
+msgstr "<p class=\"oe_view_nocontent_create\">Create New Tracking Information</p>\n"
+"          \n"
+"            "
 
 #. module: tracking
 #: field:tracking.tracking,type:0
@@ -95,9 +114,9 @@ msgid "Type"
 msgstr "类型"
 
 #. module: tracking
-#: model:ir.model,name:tracking.model_tracking_tracking
-msgid "tracking.tracking"
-msgstr "tracking.tracking"
+#: selection:tracking.tracking,type:0
+msgid "Electronics"
+msgstr "电子"
 
 #. module: tracking
 #: field:tracking.tracking,verification_interval:0
@@ -120,6 +139,7 @@ msgid "Main Information"
 msgstr "主要信息"
 
 #. module: tracking
+#: field:tracking.check,who:0
 #: field:tracking.verification,partner_id:0
 msgid "Who"
 msgstr "人员"
@@ -127,7 +147,12 @@ msgstr "人员"
 #. module: tracking
 #: selection:tracking.tracking,type:0
 msgid "Driver"
-msgstr "Driver"
+msgstr "喇叭"
+
+#. module: tracking
+#: model:ir.model,name:tracking.model_tracking_tracking
+msgid "tracking.tracking"
+msgstr "tracking.tracking"
 
 #. module: tracking
 #: selection:tracking.tracking,electronics_type:0
@@ -136,20 +161,37 @@ msgid "Wireless"
 msgstr "无线"
 
 #. module: tracking
+#: model:ir.model,name:tracking.model_tracking_check_out
+msgid "tracking.check_out"
+msgstr "tracking.check_out"
+
+#. module: tracking
+#: field:tracking.check,name:0
 #: field:tracking.tracking,name:0
 msgid "Serial Number"
 msgstr "序列号"
 
 #. module: tracking
-#: view:tracking.location:0
-#: view:tracking.verification:0
-msgid "Verification History"
-msgstr "验证历史"
+#: sql_constraint:tracking.check:0
+#: sql_constraint:tracking.tracking:0
+msgid "You can not create a duplicate serial number"
+msgstr "不能创建已存在的生产序列号"
 
 #. module: tracking
+#: field:tracking.check,create_uid:0
+msgid "Created by"
+msgstr "创建人员"
+
+#. module: tracking
+#: model:ir.model,name:tracking.model_tracking_verification
+msgid "tracking.verification"
+msgstr "tracking.verification"
+
+#. module: tracking
+#: selection:tracking.check,use:0
 #: field:tracking.location,lent_out:0
 msgid "Lent Out"
-msgstr "Lent Out"
+msgstr "被借出"
 
 #. module: tracking
 #: field:tracking.verification,date:0
@@ -173,24 +215,20 @@ msgid "Condition"
 msgstr "情况"
 
 #. module: tracking
-#: model:ir.actions.act_window,help:tracking.tracking_list_action
-msgid "<p class=\"oe_view_nocontent_create\">Create New Tracking Information</p>\n"
-"          \n"
-"          "
-msgstr "<p class=\"oe_view_nocontent_create\">创建新的追踪信息</p>\n"
-"          \n"
-"          "
+#: view:tracking.verification:0
+msgid "Verification History"
+msgstr "验证历史"
 
 #. module: tracking
-#: model:ir.actions.act_window,name:tracking.tracking_list_action
-#: model:ir.ui.menu,name:tracking.main_tracking_menu
-#: model:ir.ui.menu,name:tracking.tracking_menu
-#: field:tracking.location,tracking_id:0
-#: field:tracking.sample,tracking_id:0
+#: model:ir.model,name:tracking.model_tracking_location
+msgid "tracking.location"
+msgstr "tracking.location"
+
+#. module: tracking
+#: model:ir.ui.menu,name:tracking.check_menu
 #: view:tracking.tracking:0
-#: field:tracking.verification,tracking_id:0
-msgid "Tracking"
-msgstr "Tracking"
+msgid "Checked In/Out"
+msgstr "被检入/被检出"
 
 #. module: tracking
 #: selection:tracking.tracking,condition:0
@@ -213,6 +251,11 @@ msgid "Engineering Sample"
 msgstr "工程样品"
 
 #. module: tracking
+#: model:ir.ui.menu,name:tracking.main_menu
+msgid "Tracking Information"
+msgstr "追踪信息"
+
+#. module: tracking
 #: field:tracking.tracking,driver_type:0
 #: field:tracking.tracking,electronics_type:0
 #: field:tracking.tracking,system_type:0
@@ -221,13 +264,13 @@ msgstr "子类型"
 
 #. module: tracking
 #: field:tracking.tracking,project_id:0
-msgid "Project"
-msgstr "项目"
+msgid "Project/Part Number"
+msgstr "项目/物料号"
 
 #. module: tracking
 #: selection:tracking.tracking,condition:0
 msgid "Active"
-msgstr "Active"
+msgstr "启动"
 
 #. module: tracking
 #: view:tracking.tracking:0
@@ -240,9 +283,9 @@ msgid "Verification"
 msgstr "验证"
 
 #. module: tracking
-#: model:ir.ui.menu,name:tracking.main_menu
-msgid "Tracking Information"
-msgstr "追踪信息"
+#: field:tracking.check,time_now:0
+msgid "Time"
+msgstr "创建时间"
 
 #. module: tracking
 #: selection:tracking.tracking,condition:0
@@ -273,10 +316,20 @@ msgid "All"
 msgstr "所有"
 
 #. module: tracking
+#: model:ir.model,name:tracking.model_tracking_check_in
+msgid "tracking.check_in"
+msgstr "tracking.check_in"
+
+#. module: tracking
 #: selection:tracking.tracking,driver_type:0
 #: selection:tracking.tracking,system_type:0
 msgid "Rub & Buzz"
 msgstr "Rub 和 Buzz"
+
+#. module: tracking
+#: field:tracking.tracking,version:0
+msgid "Version/NPI Stage"
+msgstr "版本/NPI 阶段"
 
 #. module: tracking
 #: field:tracking.tracking,tier:0
@@ -284,9 +337,9 @@ msgid "Tier"
 msgstr "层次"
 
 #. module: tracking
-#: field:tracking.tracking,sample_data2:0
-msgid "Sample Data 2"
-msgstr "样品数据 2"
+#: selection:tracking.check,state:0
+msgid "Checked-in"
+msgstr "被检入"
 
 #. module: tracking
 #: field:tracking.tracking,sample_data3:0
@@ -310,19 +363,19 @@ msgid "Distortion"
 msgstr "失真"
 
 #. module: tracking
-#: view:tracking.tracking:0
-msgid "Main Tree"
-msgstr "Main Tree"
-
-#. module: tracking
 #: field:tracking.location,scan_location_y:0
 msgid "Scan Location Y"
-msgstr "Scan Location Y"
+msgstr "扫描地点Y"
 
 #. module: tracking
 #: field:tracking.location,scan_location_x:0
 msgid "Scan Location X"
-msgstr "Scan Location X"
+msgstr "扫描地点X"
+
+#. module: tracking
+#: model:ir.model,name:tracking.model_tracking_check
+msgid "tracking.check"
+msgstr "tracking.check"
 
 #. module: tracking
 #: view:tracking.sample:0
@@ -332,12 +385,27 @@ msgid "Sample Data"
 msgstr "样品数据"
 
 #. module: tracking
-#: field:tracking.location,on_line:0
-msgid "On Line"
-msgstr "On Line"
+#: view:tracking.check:0
+msgid "Check In/Out"
+msgstr "检入/检出"
 
 #. module: tracking
-#: field:tracking.tracking,date_ids:0
-msgid "Verification History For * Tier"
-msgstr "层次验证历史"
+#: field:tracking.check,use:0
+msgid "Use"
+msgstr "使用"
+
+#. module: tracking
+#: field:tracking.location,on_line:0
+msgid "On Line"
+msgstr "在线"
+
+#. module: tracking
+#: field:tracking.tracking,sample_data2:0
+msgid "Sample Data 2"
+msgstr "样品数据 2"
+
+#. module: tracking
+#: view:tracking.tracking:0
+msgid "Location"
+msgstr "地点"
 
